# AdbSms

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  celerybeat-schedule  docker-compose.yml  docker-entrypoint.sh  example.py  main.py  messages.csv  pyproject.toml
api/: app.py  auth.py  celery_app.py  migrations.py  models.py  routes.py  swagger.py  tasks.py  web_routes.py
migrations/versions/: 4ae238b793cc_initial_migration.py
templates/: bulk.html  history.html  index.html  stats.html
templates/components/: button.html  card.html  input.html
tests/: conftest.py  test_adb_connection.py  test_cli.py  test_send_bulk_sms.py  test_send_sms.py
