[project]
name = "adbsms"
version = "0.1.0"
description = "A simple Python utility to send SMS messages programmatically using ADB (Android Debug Bridge)"
authors = [
    {name = "Ammly",email = "ammlyf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

