[project]
name = "adbsms"
version = "0.1.0"
description = "A simple Python utility to send SMS messages programmatically using ADB (Android Debug Bridge)"
authors = [
    {name = "Ammly",email = "ammlyf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "celery (>=5.3.6,<6.0.0)",
    "redis (>=5.0.3,<6.0.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "sqlalchemy (>=2.0.29,<3.0.0)",
    "alembic (>=1.13.1,<2.0.0)",
    "flask (>=3.0.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.0,<4.0.0)",
    "flask-migrate (>=4.0.5,<5.0.0)",
    "flask-script (>=2.0.6,<3.0.0)",
    "flask-cors (>=4.0.0,<5.0.0)",
    "flask-limiter (>=3.5.0,<4.0.0)",
    "flask-swagger-ui (>=4.11.1,<5.0.0)",
    "werkzeug (>=3.0.1,<4.0.0)",
    "gunicorn (>=21.2.0,<22.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

